--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        apk add build-base git zip gawk python3 py3-pip bash
+        apk add build-base git zip gawk python3 py3-pip bash mkisofs
 
     - name: git checkout
       uses: actions/checkout@v3
