--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -84,7 +84,7 @@ jobs:
 
 
   release:
-    needs: [build, build-variants]
+    needs: [build, build-debug]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master'
     steps:
