--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -77,12 +77,14 @@ jobs:
 
     - name: Get version
       id: version
-      run: echo "::set-output name=version::$(make oplversion)"
+      run: |
+        echo "OPL_VERSION=$(make oplversion)" >> $GITHUB_ENV
+        echo OPL_VERSION is ${{ env.OPL_VERSION }}
 
     - name: Compile -> make ${{ matrix.t10k }} ${{ matrix.igs }} ${{ matrix.pademu }} ${{ matrix.rtl }} NOT_PACKED=1
       run: |
         make --trace ${{ matrix.t10k }} ${{ matrix.igs }} ${{ matrix.pademu }} ${{ matrix.rtl }} NOT_PACKED=1
-        mv opl.elf OPNPS2LD-${{ steps.version.outputs.version }}-${{ matrix.t10k }}-${{ matrix.igs }}-${{ matrix.pademu }}-${{ matrix.rtl }}.ELF
+        mv opl.elf OPNPS2LD-${{ env.OPL_VERSION }}-${{ matrix.t10k }}-${{ matrix.igs }}-${{ matrix.pademu }}-${{ matrix.rtl }}.ELF
 
     - name: Create detailed changelog
       run: sh ./make_changelog.sh
@@ -148,7 +150,9 @@ jobs:
 
     - name: Get version
       id: version
-      run: echo "::set-output name=version::$(make oplversion)"
+      run: |
+        echo "OPL_VERSION=$(make oplversion)" >> $GITHUB_ENV
+        echo OPL_VERSION is ${{ env.OPL_VERSION }}
 
     - name: Compile -> make debug
       run: |
@@ -158,7 +162,7 @@ jobs:
     - name: Upload variants artifact ELF
       uses: actions/upload-artifact@v3
       with:
-        name: opl-debug-${{ steps.version.outputs.version }}-${{ matrix.docker }}
+        name: opl-debug-${{ env.OPL_VERSION }}-${{ matrix.docker }}
         path: opl-*.elf
 
   release:
@@ -176,7 +180,9 @@ jobs:
 
     - name: Get version
       id: version
-      run: echo "::set-output name=version::$(make oplversion)"
+      run: |
+        echo "OPL_VERSION=$(make oplversion)" >> $GITHUB_ENV
+        echo OPL_VERSION is ${{ env.OPL_VERSION }}
 
     - name: Download all artifacts
       uses: actions/download-artifact@v3
@@ -185,12 +191,12 @@ jobs:
       run: |
         cp INFO/* OPNPS2LD/
         cp INFO/* OPNPS2LD-VARIANTS/
-        7z a -t7z OPNPS2LD-${{ steps.version.outputs.version }}.7z OPNPS2LD/*
-        7z a -t7z OPNPS2LD-VARIANTS-${{ steps.version.outputs.version }}.7z OPNPS2LD-VARIANTS/*
-        7z a -t7z OPNPS2LD-LANGS-${{ steps.version.outputs.version }}.7z OPNPS2LD-LANGS/*
-        cp -f OPNPS2LD-${{ steps.version.outputs.version }}.7z OPNPS2LD.7z
-        cp -f OPNPS2LD-VARIANTS-${{ steps.version.outputs.version }}.7z OPNPS2LD-VARIANTS.7z
-        cp -f OPNPS2LD-LANGS-${{ steps.version.outputs.version }}.7z OPNPS2LD-LANGS.7z
+        7z a -t7z OPNPS2LD-${{ env.OPL_VERSION }}.7z OPNPS2LD/*
+        7z a -t7z OPNPS2LD-VARIANTS-${{ env.OPL_VERSION }}.7z OPNPS2LD-VARIANTS/*
+        7z a -t7z OPNPS2LD-LANGS-${{ env.OPL_VERSION }}.7z OPNPS2LD-LANGS/*
+        cp -f OPNPS2LD-${{ env.OPL_VERSION }}.7z OPNPS2LD.7z
+        cp -f OPNPS2LD-VARIANTS-${{ env.OPL_VERSION }}.7z OPNPS2LD-VARIANTS.7z
+        cp -f OPNPS2LD-LANGS-${{ env.OPL_VERSION }}.7z OPNPS2LD-LANGS.7z
 
     - name: Create prerelease
       if: github.ref == 'refs/heads/master'
